[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-luopan"
version = "0.1.0"
description = "MCP server for Luopan (Chinese destiny chart reading + follow-up chat)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ZoezoeCookie" },
]
keywords = ["mcp", "luopan", "fengshui", "bazi", "four-pillars"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/ZoezoeCookie/mcp-luopan"
Repository = "https://github.com/ZoezoeCookie/mcp-luopan"
Issues = "https://github.com/ZoezoeCookie/mcp-luopan/issues"

[project.scripts]
mcp-luopan = "mcp_luopan.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_luopan"]
